--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="thor"></div>
                         <h3>Thor</h3>
                     </a>
@@ -64,5 +64,39 @@
         <h3>All Images &COPY; Marvel</h3>
     </footer>
     
+<section class="lightbox" id="lightbox">
+    <a href="" class="lightbox_close">X</a>
+    <article>
+        <h3 class="lb_heading">Captain America - The First Avenger</h3>
+        <p class="lb_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Sunt impedit exercitationem recusandae itaque alias ratione 
+            eos perferendis, accusantium vel facilis ducimus optio, 
+            consectetur ullam vero. Repudiandae nostrum animi facilis iste.
+        </p>
+        <p class="lb_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Sunt impedit exercitationem recusandae.
+        </p>
+    </article>
+</section>
+
+<section class="lightbox" id="lightbox2">
+    <a href="" class="lightbox_close">X</a>
+    <article>
+        <h3 class="lb_heading">Thor Odinson - God of Thunder - The First Avenger</h3>
+        <p class="lb_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Sunt impedit exercitationem recusandae itaque alias ratione 
+            eos perferendis, accusantium vel facilis ducimus optio, 
+            consectetur ullam vero. Repudiandae nostrum animi facilis iste.
+        </p>
+        <p class="lb_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Sunt impedit exercitationem recusandae.
+        </p>
+    </article>
+</section>
+
 </body>
 </html>
